// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`xy_expression XYChart component it renders area 1`] = `
<Chart
  renderer="canvas"
>
  <Settings
    allowBrushingLastHistogramBin={false}
    ariaUseDefaultSummary={true}
    baseTheme={Object {}}
    debugState={false}
    legendAction={
      Object {
        "$$typeof": Symbol(react.memo),
        "compare": null,
        "type": [Function],
      }
    }
    legendPosition="top"
    onBrushEnd={[Function]}
    onElementClick={[Function]}
    onPointerUpdate={[Function]}
    rotation={0}
    showLegend={false}
    showLegendExtra={false}
    theme={
      Object {
        "background": Object {
          "color": undefined,
        },
        "barSeriesStyle": Object {},
        "chartMargins": Object {},
        "legend": Object {
          "labelOptions": Object {
            "maxLines": 0,
          },
        },
      }
    }
    tooltip={
      Object {
        "boundary": undefined,
        "headerFormatter": [Function],
      }
    }
  />
  <Component
    gridLine={
      Object {
        "strokeWidth": 1,
        "visible": true,
      }
    }
    hide={false}
    id="x"
    position="bottom"
    style={
      Object {
        "axisTitle": Object {
          "padding": undefined,
          "visible": true,
        },
        "tickLabel": Object {
          "padding": undefined,
          "rotation": 0,
          "visible": true,
        },
      }
    }
    tickFormat={[Function]}
    timeAxisLayerCount={0}
    title="c"
  />
  <Component
    domain={
      Object {
        "fit": false,
        "max": NaN,
        "min": NaN,
      }
    }
    gridLine={
      Object {
        "visible": false,
      }
    }
    groupId="left"
    id="left"
    key="left"
    position="left"
    style={
      Object {
        "axisTitle": Object {
          "padding": undefined,
          "visible": true,
        },
        "tickLabel": Object {
          "padding": undefined,
          "rotation": -90,
          "visible": false,
        },
      }
    }
    tickFormat={[Function]}
    ticks={5}
    title="a"
  />
  <XyEndzones
    darkMode={false}
    histogramMode={false}
  />
  <AreaSeries
    areaSeriesStyle={
      Object {
        "point": Object {
          "radius": 5,
          "visible": false,
        },
      }
    }
    color={[Function]}
    data={
      Array [
        Object {
          "a": 1,
          "b": 2,
          "c": "I",
          "d": "Foo",
        },
        Object {
          "a": 1,
          "b": 5,
          "c": "J",
          "d": "Bar",
        },
      ]
    }
    enableHistogramMode={false}
    fit={
      Object {
        "endValue": undefined,
        "type": "none",
      }
    }
    groupId="left"
    id="d-a"
    key="0-0"
    lineSeriesStyle={
      Object {
        "point": Object {
          "radius": 5,
          "visible": false,
        },
      }
    }
    name={[Function]}
    splitSeriesAccessors={
      Array [
        "d",
      ]
    }
    stackAccessors={Array []}
    timeZone="UTC"
    xAccessor="c"
    xScaleType="ordinal"
    yAccessors={
      Array [
        "a",
      ]
    }
    yScaleType="linear"
  />
  <AreaSeries
    areaSeriesStyle={
      Object {
        "point": Object {
          "radius": 5,
          "visible": false,
        },
      }
    }
    color={[Function]}
    data={
      Array [
        Object {
          "a": 1,
          "b": 2,
          "c": "I",
          "d": "Foo",
        },
        Object {
          "a": 1,
          "b": 5,
          "c": "J",
          "d": "Bar",
        },
      ]
    }
    enableHistogramMode={false}
    fit={
      Object {
        "endValue": undefined,
        "type": "none",
      }
    }
    groupId="left"
    id="d-b"
    key="0-1"
    lineSeriesStyle={
      Object {
        "point": Object {
          "radius": 5,
          "visible": false,
        },
      }
    }
    name={[Function]}
    splitSeriesAccessors={
      Array [
        "d",
      ]
    }
    stackAccessors={Array []}
    timeZone="UTC"
    xAccessor="c"
    xScaleType="ordinal"
    yAccessors={
      Array [
        "b",
      ]
    }
    yScaleType="linear"
  />
</Chart>
`;

exports[`xy_expression XYChart component it renders bar 1`] = `
<Chart
  renderer="canvas"
>
  <Settings
    allowBrushingLastHistogramBin={false}
    ariaUseDefaultSummary={true}
    baseTheme={Object {}}
    debugState={false}
    legendAction={
      Object {
        "$$typeof": Symbol(react.memo),
        "compare": null,
        "type": [Function],
      }
    }
    legendPosition="top"
    onBrushEnd={[Function]}
    onElementClick={[Function]}
    onPointerUpdate={[Function]}
    rotation={0}
    showLegend={false}
    showLegendExtra={false}
    theme={
      Object {
        "background": Object {
          "color": undefined,
        },
        "barSeriesStyle": Object {},
        "chartMargins": Object {},
        "legend": Object {
          "labelOptions": Object {
            "maxLines": 0,
          },
        },
      }
    }
    tooltip={
      Object {
        "boundary": undefined,
        "headerFormatter": [Function],
      }
    }
  />
  <Component
    gridLine={
      Object {
        "strokeWidth": 1,
        "visible": true,
      }
    }
    hide={false}
    id="x"
    position="bottom"
    style={
      Object {
        "axisTitle": Object {
          "padding": undefined,
          "visible": true,
        },
        "tickLabel": Object {
          "padding": undefined,
          "rotation": 0,
          "visible": true,
        },
      }
    }
    tickFormat={[Function]}
    timeAxisLayerCount={0}
    title="c"
  />
  <Component
    domain={
      Object {
        "fit": false,
        "max": NaN,
        "min": NaN,
      }
    }
    gridLine={
      Object {
        "visible": false,
      }
    }
    groupId="left"
    id="left"
    key="left"
    position="left"
    style={
      Object {
        "axisTitle": Object {
          "padding": undefined,
          "visible": true,
        },
        "tickLabel": Object {
          "padding": undefined,
          "rotation": -90,
          "visible": false,
        },
      }
    }
    tickFormat={[Function]}
    ticks={5}
    title="a"
  />
  <XyEndzones
    darkMode={false}
    histogramMode={false}
  />
  <BarSeries
    areaSeriesStyle={
      Object {
        "point": Object {
          "radius": 5,
          "visible": false,
        },
      }
    }
    color={[Function]}
    data={
      Array [
        Object {
          "a": 1,
          "b": 2,
          "c": "I",
          "d": "Foo",
        },
        Object {
          "a": 1,
          "b": 5,
          "c": "J",
          "d": "Bar",
        },
      ]
    }
    displayValueSettings={
      Object {
        "isAlternatingValueLabel": false,
        "isValueContainedInElement": false,
        "overflowConstraints": Array [
          "chartEdges",
          "barGeometry",
        ],
        "showValueLabel": false,
        "valueFormatter": [Function],
      }
    }
    enableHistogramMode={false}
    groupId="left"
    id="d-a"
    key="0-0"
    lineSeriesStyle={
      Object {
        "point": Object {
          "radius": 5,
          "visible": false,
        },
      }
    }
    name={[Function]}
    splitSeriesAccessors={
      Array [
        "d",
      ]
    }
    stackAccessors={Array []}
    timeZone="UTC"
    xAccessor="c"
    xScaleType="ordinal"
    yAccessors={
      Array [
        "a",
      ]
    }
    yScaleType="linear"
  />
  <BarSeries
    areaSeriesStyle={
      Object {
        "point": Object {
          "radius": 5,
          "visible": false,
        },
      }
    }
    color={[Function]}
    data={
      Array [
        Object {
          "a": 1,
          "b": 2,
          "c": "I",
          "d": "Foo",
        },
        Object {
          "a": 1,
          "b": 5,
          "c": "J",
          "d": "Bar",
        },
      ]
    }
    displayValueSettings={
      Object {
        "isAlternatingValueLabel": false,
        "isValueContainedInElement": false,
        "overflowConstraints": Array [
          "chartEdges",
          "barGeometry",
        ],
        "showValueLabel": false,
        "valueFormatter": [Function],
      }
    }
    enableHistogramMode={false}
    groupId="left"
    id="d-b"
    key="0-1"
    lineSeriesStyle={
      Object {
        "point": Object {
          "radius": 5,
          "visible": false,
        },
      }
    }
    name={[Function]}
    splitSeriesAccessors={
      Array [
        "d",
      ]
    }
    stackAccessors={Array []}
    timeZone="UTC"
    xAccessor="c"
    xScaleType="ordinal"
    yAccessors={
      Array [
        "b",
      ]
    }
    yScaleType="linear"
  />
</Chart>
`;

exports[`xy_expression XYChart component it renders horizontal bar 1`] = `
<Chart
  renderer="canvas"
>
  <Settings
    allowBrushingLastHistogramBin={false}
    ariaUseDefaultSummary={true}
    baseTheme={Object {}}
    debugState={false}
    legendAction={
      Object {
        "$$typeof": Symbol(react.memo),
        "compare": null,
        "type": [Function],
      }
    }
    legendPosition="top"
    onBrushEnd={[Function]}
    onElementClick={[Function]}
    onPointerUpdate={[Function]}
    rotation={90}
    showLegend={false}
    showLegendExtra={false}
    theme={
      Object {
        "background": Object {
          "color": undefined,
        },
        "barSeriesStyle": Object {},
        "chartMargins": Object {},
        "legend": Object {
          "labelOptions": Object {
            "maxLines": 0,
          },
        },
      }
    }
    tooltip={
      Object {
        "boundary": undefined,
        "headerFormatter": [Function],
      }
    }
  />
  <Component
    gridLine={
      Object {
        "strokeWidth": 1,
        "visible": true,
      }
    }
    hide={false}
    id="x"
    position="left"
    style={
      Object {
        "axisTitle": Object {
          "padding": undefined,
          "visible": true,
        },
        "tickLabel": Object {
          "padding": undefined,
          "rotation": 0,
          "visible": true,
        },
      }
    }
    tickFormat={[Function]}
    timeAxisLayerCount={0}
    title="c"
  />
  <Component
    domain={
      Object {
        "fit": false,
        "max": NaN,
        "min": NaN,
      }
    }
    gridLine={
      Object {
        "visible": false,
      }
    }
    groupId="left"
    id="left"
    key="left"
    position="bottom"
    style={
      Object {
        "axisTitle": Object {
          "padding": undefined,
          "visible": true,
        },
        "tickLabel": Object {
          "padding": undefined,
          "rotation": -90,
          "visible": false,
        },
      }
    }
    tickFormat={[Function]}
    ticks={5}
    title="a"
  />
  <XyEndzones
    darkMode={false}
    histogramMode={false}
  />
  <BarSeries
    areaSeriesStyle={
      Object {
        "point": Object {
          "radius": 5,
          "visible": false,
        },
      }
    }
    color={[Function]}
    data={
      Array [
        Object {
          "a": 1,
          "b": 2,
          "c": "I",
          "d": "Foo",
        },
        Object {
          "a": 1,
          "b": 5,
          "c": "J",
          "d": "Bar",
        },
      ]
    }
    displayValueSettings={
      Object {
        "isAlternatingValueLabel": false,
        "isValueContainedInElement": false,
        "overflowConstraints": Array [
          "chartEdges",
          "barGeometry",
        ],
        "showValueLabel": false,
        "valueFormatter": [Function],
      }
    }
    enableHistogramMode={false}
    groupId="left"
    id="d-a"
    key="0-0"
    lineSeriesStyle={
      Object {
        "point": Object {
          "radius": 5,
          "visible": false,
        },
      }
    }
    name={[Function]}
    splitSeriesAccessors={
      Array [
        "d",
      ]
    }
    stackAccessors={Array []}
    timeZone="UTC"
    xAccessor="c"
    xScaleType="ordinal"
    yAccessors={
      Array [
        "a",
      ]
    }
    yScaleType="linear"
  />
  <BarSeries
    areaSeriesStyle={
      Object {
        "point": Object {
          "radius": 5,
          "visible": false,
        },
      }
    }
    color={[Function]}
    data={
      Array [
        Object {
          "a": 1,
          "b": 2,
          "c": "I",
          "d": "Foo",
        },
        Object {
          "a": 1,
          "b": 5,
          "c": "J",
          "d": "Bar",
        },
      ]
    }
    displayValueSettings={
      Object {
        "isAlternatingValueLabel": false,
        "isValueContainedInElement": false,
        "overflowConstraints": Array [
          "chartEdges",
          "barGeometry",
        ],
        "showValueLabel": false,
        "valueFormatter": [Function],
      }
    }
    enableHistogramMode={false}
    groupId="left"
    id="d-b"
    key="0-1"
    lineSeriesStyle={
      Object {
        "point": Object {
          "radius": 5,
          "visible": false,
        },
      }
    }
    name={[Function]}
    splitSeriesAccessors={
      Array [
        "d",
      ]
    }
    stackAccessors={Array []}
    timeZone="UTC"
    xAccessor="c"
    xScaleType="ordinal"
    yAccessors={
      Array [
        "b",
      ]
    }
    yScaleType="linear"
  />
</Chart>
`;

exports[`xy_expression XYChart component it renders line 1`] = `
<Chart
  renderer="canvas"
>
  <Settings
    allowBrushingLastHistogramBin={false}
    ariaUseDefaultSummary={true}
    baseTheme={Object {}}
    debugState={false}
    legendAction={
      Object {
        "$$typeof": Symbol(react.memo),
        "compare": null,
        "type": [Function],
      }
    }
    legendPosition="top"
    onBrushEnd={[Function]}
    onElementClick={[Function]}
    onPointerUpdate={[Function]}
    rotation={0}
    showLegend={false}
    showLegendExtra={false}
    theme={
      Object {
        "background": Object {
          "color": undefined,
        },
        "barSeriesStyle": Object {},
        "chartMargins": Object {},
        "legend": Object {
          "labelOptions": Object {
            "maxLines": 0,
          },
        },
      }
    }
    tooltip={
      Object {
        "boundary": undefined,
        "headerFormatter": [Function],
      }
    }
  />
  <Component
    gridLine={
      Object {
        "strokeWidth": 1,
        "visible": true,
      }
    }
    hide={false}
    id="x"
    position="bottom"
    style={
      Object {
        "axisTitle": Object {
          "padding": undefined,
          "visible": true,
        },
        "tickLabel": Object {
          "padding": undefined,
          "rotation": 0,
          "visible": true,
        },
      }
    }
    tickFormat={[Function]}
    timeAxisLayerCount={0}
    title="c"
  />
  <Component
    domain={
      Object {
        "fit": false,
        "max": NaN,
        "min": NaN,
      }
    }
    gridLine={
      Object {
        "visible": false,
      }
    }
    groupId="left"
    id="left"
    key="left"
    position="left"
    style={
      Object {
        "axisTitle": Object {
          "padding": undefined,
          "visible": true,
        },
        "tickLabel": Object {
          "padding": undefined,
          "rotation": -90,
          "visible": false,
        },
      }
    }
    tickFormat={[Function]}
    ticks={5}
    title="a"
  />
  <XyEndzones
    darkMode={false}
    histogramMode={false}
  />
  <LineSeries
    areaSeriesStyle={
      Object {
        "point": Object {
          "radius": 5,
          "visible": false,
        },
      }
    }
    color={[Function]}
    data={
      Array [
        Object {
          "a": 1,
          "b": 2,
          "c": "I",
          "d": "Foo",
        },
        Object {
          "a": 1,
          "b": 5,
          "c": "J",
          "d": "Bar",
        },
      ]
    }
    enableHistogramMode={false}
    fit={
      Object {
        "endValue": undefined,
        "type": "none",
      }
    }
    groupId="left"
    id="d-a"
    key="0-0"
    lineSeriesStyle={
      Object {
        "point": Object {
          "radius": 5,
          "visible": false,
        },
      }
    }
    name={[Function]}
    splitSeriesAccessors={
      Array [
        "d",
      ]
    }
    stackAccessors={Array []}
    timeZone="UTC"
    xAccessor="c"
    xScaleType="ordinal"
    yAccessors={
      Array [
        "a",
      ]
    }
    yScaleType="linear"
  />
  <LineSeries
    areaSeriesStyle={
      Object {
        "point": Object {
          "radius": 5,
          "visible": false,
        },
      }
    }
    color={[Function]}
    data={
      Array [
        Object {
          "a": 1,
          "b": 2,
          "c": "I",
          "d": "Foo",
        },
        Object {
          "a": 1,
          "b": 5,
          "c": "J",
          "d": "Bar",
        },
      ]
    }
    enableHistogramMode={false}
    fit={
      Object {
        "endValue": undefined,
        "type": "none",
      }
    }
    groupId="left"
    id="d-b"
    key="0-1"
    lineSeriesStyle={
      Object {
        "point": Object {
          "radius": 5,
          "visible": false,
        },
      }
    }
    name={[Function]}
    splitSeriesAccessors={
      Array [
        "d",
      ]
    }
    stackAccessors={Array []}
    timeZone="UTC"
    xAccessor="c"
    xScaleType="ordinal"
    yAccessors={
      Array [
        "b",
      ]
    }
    yScaleType="linear"
  />
</Chart>
`;

exports[`xy_expression XYChart component it renders stacked area 1`] = `
<Chart
  renderer="canvas"
>
  <Settings
    allowBrushingLastHistogramBin={false}
    ariaUseDefaultSummary={true}
    baseTheme={Object {}}
    debugState={false}
    legendAction={
      Object {
        "$$typeof": Symbol(react.memo),
        "compare": null,
        "type": [Function],
      }
    }
    legendPosition="top"
    onBrushEnd={[Function]}
    onElementClick={[Function]}
    onPointerUpdate={[Function]}
    rotation={0}
    showLegend={false}
    showLegendExtra={false}
    theme={
      Object {
        "background": Object {
          "color": undefined,
        },
        "barSeriesStyle": Object {},
        "chartMargins": Object {},
        "legend": Object {
          "labelOptions": Object {
            "maxLines": 0,
          },
        },
      }
    }
    tooltip={
      Object {
        "boundary": undefined,
        "headerFormatter": [Function],
      }
    }
  />
  <Component
    gridLine={
      Object {
        "strokeWidth": 1,
        "visible": true,
      }
    }
    hide={false}
    id="x"
    position="bottom"
    style={
      Object {
        "axisTitle": Object {
          "padding": undefined,
          "visible": true,
        },
        "tickLabel": Object {
          "padding": undefined,
          "rotation": 0,
          "visible": true,
        },
      }
    }
    tickFormat={[Function]}
    timeAxisLayerCount={0}
    title="c"
  />
  <Component
    domain={
      Object {
        "fit": false,
        "max": NaN,
        "min": NaN,
      }
    }
    gridLine={
      Object {
        "visible": false,
      }
    }
    groupId="left"
    id="left"
    key="left"
    position="left"
    style={
      Object {
        "axisTitle": Object {
          "padding": undefined,
          "visible": true,
        },
        "tickLabel": Object {
          "padding": undefined,
          "rotation": -90,
          "visible": false,
        },
      }
    }
    tickFormat={[Function]}
    ticks={5}
    title="a"
  />
  <XyEndzones
    darkMode={false}
    histogramMode={false}
  />
  <AreaSeries
    areaSeriesStyle={
      Object {
        "point": Object {
          "radius": 5,
          "visible": false,
        },
      }
    }
    color={[Function]}
    data={
      Array [
        Object {
          "a": 1,
          "b": 2,
          "c": "I",
          "d": "Foo",
        },
        Object {
          "a": 1,
          "b": 5,
          "c": "J",
          "d": "Bar",
        },
      ]
    }
    enableHistogramMode={false}
    fit={
      Object {
        "endValue": undefined,
        "type": "none",
      }
    }
    groupId="left"
    id="d-a"
    key="0-0"
    lineSeriesStyle={
      Object {
        "point": Object {
          "radius": 5,
          "visible": false,
        },
      }
    }
    name={[Function]}
    splitSeriesAccessors={
      Array [
        "d",
      ]
    }
    stackAccessors={
      Array [
        "c",
      ]
    }
    timeZone="UTC"
    xAccessor="c"
    xScaleType="ordinal"
    yAccessors={
      Array [
        "a",
      ]
    }
    yScaleType="linear"
  />
  <AreaSeries
    areaSeriesStyle={
      Object {
        "point": Object {
          "radius": 5,
          "visible": false,
        },
      }
    }
    color={[Function]}
    data={
      Array [
        Object {
          "a": 1,
          "b": 2,
          "c": "I",
          "d": "Foo",
        },
        Object {
          "a": 1,
          "b": 5,
          "c": "J",
          "d": "Bar",
        },
      ]
    }
    enableHistogramMode={false}
    fit={
      Object {
        "endValue": undefined,
        "type": "none",
      }
    }
    groupId="left"
    id="d-b"
    key="0-1"
    lineSeriesStyle={
      Object {
        "point": Object {
          "radius": 5,
          "visible": false,
        },
      }
    }
    name={[Function]}
    splitSeriesAccessors={
      Array [
        "d",
      ]
    }
    stackAccessors={
      Array [
        "c",
      ]
    }
    timeZone="UTC"
    xAccessor="c"
    xScaleType="ordinal"
    yAccessors={
      Array [
        "b",
      ]
    }
    yScaleType="linear"
  />
</Chart>
`;

exports[`xy_expression XYChart component it renders stacked bar 1`] = `
<Chart
  renderer="canvas"
>
  <Settings
    allowBrushingLastHistogramBin={false}
    ariaUseDefaultSummary={true}
    baseTheme={Object {}}
    debugState={false}
    legendAction={
      Object {
        "$$typeof": Symbol(react.memo),
        "compare": null,
        "type": [Function],
      }
    }
    legendPosition="top"
    onBrushEnd={[Function]}
    onElementClick={[Function]}
    onPointerUpdate={[Function]}
    rotation={0}
    showLegend={false}
    showLegendExtra={false}
    theme={
      Object {
        "background": Object {
          "color": undefined,
        },
        "barSeriesStyle": Object {},
        "chartMargins": Object {},
        "legend": Object {
          "labelOptions": Object {
            "maxLines": 0,
          },
        },
      }
    }
    tooltip={
      Object {
        "boundary": undefined,
        "headerFormatter": [Function],
      }
    }
  />
  <Component
    gridLine={
      Object {
        "strokeWidth": 1,
        "visible": true,
      }
    }
    hide={false}
    id="x"
    position="bottom"
    style={
      Object {
        "axisTitle": Object {
          "padding": undefined,
          "visible": true,
        },
        "tickLabel": Object {
          "padding": undefined,
          "rotation": 0,
          "visible": true,
        },
      }
    }
    tickFormat={[Function]}
    timeAxisLayerCount={0}
    title="c"
  />
  <Component
    domain={
      Object {
        "fit": false,
        "max": NaN,
        "min": NaN,
      }
    }
    gridLine={
      Object {
        "visible": false,
      }
    }
    groupId="left"
    id="left"
    key="left"
    position="left"
    style={
      Object {
        "axisTitle": Object {
          "padding": undefined,
          "visible": true,
        },
        "tickLabel": Object {
          "padding": undefined,
          "rotation": -90,
          "visible": false,
        },
      }
    }
    tickFormat={[Function]}
    ticks={5}
    title="a"
  />
  <XyEndzones
    darkMode={false}
    histogramMode={false}
  />
  <BarSeries
    areaSeriesStyle={
      Object {
        "point": Object {
          "radius": 5,
          "visible": false,
        },
      }
    }
    color={[Function]}
    data={
      Array [
        Object {
          "a": 1,
          "b": 2,
          "c": "I",
          "d": "Foo",
        },
        Object {
          "a": 1,
          "b": 5,
          "c": "J",
          "d": "Bar",
        },
      ]
    }
    displayValueSettings={
      Object {
        "isAlternatingValueLabel": false,
        "isValueContainedInElement": false,
        "overflowConstraints": Array [
          "chartEdges",
          "barGeometry",
        ],
        "showValueLabel": false,
        "valueFormatter": [Function],
      }
    }
    enableHistogramMode={false}
    groupId="left"
    id="d-a"
    key="0-0"
    lineSeriesStyle={
      Object {
        "point": Object {
          "radius": 5,
          "visible": false,
        },
      }
    }
    name={[Function]}
    splitSeriesAccessors={
      Array [
        "d",
      ]
    }
    stackAccessors={
      Array [
        "c",
      ]
    }
    timeZone="UTC"
    xAccessor="c"
    xScaleType="ordinal"
    yAccessors={
      Array [
        "a",
      ]
    }
    yScaleType="linear"
  />
  <BarSeries
    areaSeriesStyle={
      Object {
        "point": Object {
          "radius": 5,
          "visible": false,
        },
      }
    }
    color={[Function]}
    data={
      Array [
        Object {
          "a": 1,
          "b": 2,
          "c": "I",
          "d": "Foo",
        },
        Object {
          "a": 1,
          "b": 5,
          "c": "J",
          "d": "Bar",
        },
      ]
    }
    displayValueSettings={
      Object {
        "isAlternatingValueLabel": false,
        "isValueContainedInElement": false,
        "overflowConstraints": Array [
          "chartEdges",
          "barGeometry",
        ],
        "showValueLabel": false,
        "valueFormatter": [Function],
      }
    }
    enableHistogramMode={false}
    groupId="left"
    id="d-b"
    key="0-1"
    lineSeriesStyle={
      Object {
        "point": Object {
          "radius": 5,
          "visible": false,
        },
      }
    }
    name={[Function]}
    splitSeriesAccessors={
      Array [
        "d",
      ]
    }
    stackAccessors={
      Array [
        "c",
      ]
    }
    timeZone="UTC"
    xAccessor="c"
    xScaleType="ordinal"
    yAccessors={
      Array [
        "b",
      ]
    }
    yScaleType="linear"
  />
</Chart>
`;

exports[`xy_expression XYChart component it renders stacked horizontal bar 1`] = `
<Chart
  renderer="canvas"
>
  <Settings
    allowBrushingLastHistogramBin={false}
    ariaUseDefaultSummary={true}
    baseTheme={Object {}}
    debugState={false}
    legendAction={
      Object {
        "$$typeof": Symbol(react.memo),
        "compare": null,
        "type": [Function],
      }
    }
    legendPosition="top"
    onBrushEnd={[Function]}
    onElementClick={[Function]}
    onPointerUpdate={[Function]}
    rotation={90}
    showLegend={false}
    showLegendExtra={false}
    theme={
      Object {
        "background": Object {
          "color": undefined,
        },
        "barSeriesStyle": Object {},
        "chartMargins": Object {},
        "legend": Object {
          "labelOptions": Object {
            "maxLines": 0,
          },
        },
      }
    }
    tooltip={
      Object {
        "boundary": undefined,
        "headerFormatter": [Function],
      }
    }
  />
  <Component
    gridLine={
      Object {
        "strokeWidth": 1,
        "visible": true,
      }
    }
    hide={false}
    id="x"
    position="left"
    style={
      Object {
        "axisTitle": Object {
          "padding": undefined,
          "visible": true,
        },
        "tickLabel": Object {
          "padding": undefined,
          "rotation": 0,
          "visible": true,
        },
      }
    }
    tickFormat={[Function]}
    timeAxisLayerCount={0}
    title="c"
  />
  <Component
    domain={
      Object {
        "fit": false,
        "max": NaN,
        "min": NaN,
      }
    }
    gridLine={
      Object {
        "visible": false,
      }
    }
    groupId="left"
    id="left"
    key="left"
    position="bottom"
    style={
      Object {
        "axisTitle": Object {
          "padding": undefined,
          "visible": true,
        },
        "tickLabel": Object {
          "padding": undefined,
          "rotation": -90,
          "visible": false,
        },
      }
    }
    tickFormat={[Function]}
    ticks={5}
    title="a"
  />
  <XyEndzones
    darkMode={false}
    histogramMode={false}
  />
  <BarSeries
    areaSeriesStyle={
      Object {
        "point": Object {
          "radius": 5,
          "visible": false,
        },
      }
    }
    color={[Function]}
    data={
      Array [
        Object {
          "a": 1,
          "b": 2,
          "c": "I",
          "d": "Foo",
        },
        Object {
          "a": 1,
          "b": 5,
          "c": "J",
          "d": "Bar",
        },
      ]
    }
    displayValueSettings={
      Object {
        "isAlternatingValueLabel": false,
        "isValueContainedInElement": false,
        "overflowConstraints": Array [
          "chartEdges",
          "barGeometry",
        ],
        "showValueLabel": false,
        "valueFormatter": [Function],
      }
    }
    enableHistogramMode={false}
    groupId="left"
    id="d-a"
    key="0-0"
    lineSeriesStyle={
      Object {
        "point": Object {
          "radius": 5,
          "visible": false,
        },
      }
    }
    name={[Function]}
    splitSeriesAccessors={
      Array [
        "d",
      ]
    }
    stackAccessors={
      Array [
        "c",
      ]
    }
    timeZone="UTC"
    xAccessor="c"
    xScaleType="ordinal"
    yAccessors={
      Array [
        "a",
      ]
    }
    yScaleType="linear"
  />
  <BarSeries
    areaSeriesStyle={
      Object {
        "point": Object {
          "radius": 5,
          "visible": false,
        },
      }
    }
    color={[Function]}
    data={
      Array [
        Object {
          "a": 1,
          "b": 2,
          "c": "I",
          "d": "Foo",
        },
        Object {
          "a": 1,
          "b": 5,
          "c": "J",
          "d": "Bar",
        },
      ]
    }
    displayValueSettings={
      Object {
        "isAlternatingValueLabel": false,
        "isValueContainedInElement": false,
        "overflowConstraints": Array [
          "chartEdges",
          "barGeometry",
        ],
        "showValueLabel": false,
        "valueFormatter": [Function],
      }
    }
    enableHistogramMode={false}
    groupId="left"
    id="d-b"
    key="0-1"
    lineSeriesStyle={
      Object {
        "point": Object {
          "radius": 5,
          "visible": false,
        },
      }
    }
    name={[Function]}
    splitSeriesAccessors={
      Array [
        "d",
      ]
    }
    stackAccessors={
      Array [
        "c",
      ]
    }
    timeZone="UTC"
    xAccessor="c"
    xScaleType="ordinal"
    yAccessors={
      Array [
        "b",
      ]
    }
    yScaleType="linear"
  />
</Chart>
`;
